--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,8 +19,10 @@ jobs:
       with:
         dotnet-version: 6.0.x
     - name: Install dependencies
-      run: dotnet restore ShopApp
+      run: 
+        dotnet add ShopApp\Shop.Server package AutoMapper.Extensions.Microsoft.DependencyInjection --version 12.0.0
+        dotnet add ShopApp\Shop.Server package Swashbuckle.AspNetCore --version 6.2.3
     - name: Build with dotnet
       run: dotnet build ShopApp\Shop.Server
     - name: Test with dotnet
-      run: dotnet test ShopApp\Shop.Server
+      run: dotnet test ShopApp
