--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -18,6 +18,8 @@ jobs:
       run: |
         dotnet add PONRF\PonrfServer package AutoMapper.Extensions.Microsoft.DependencyInjection --version 12.0.0
         dotnet add PONRF\PonrfServer package Swashbuckle.AspNetCore --version 6.2.3
+        dotnet add PONRF\PonrfDomain package Microsoft.EntityFrameworkCore --version 6.0.16
+        dotnet add PONRF\PonrfDomain package Npgsql.EntityFrameworkCore.PostgreSQL --version 6.0.8
     - name: Build with dotnet
       run: dotnet build PONRF\PonrfServer
     - name: Test with dotnet
