--- a/HotelBookingSystem/HotelBookingSystem.Classes/HotelBookingSystem.Classes.csproj
+++ b/HotelBookingSystem/HotelBookingSystem.Classes/HotelBookingSystem.Classes.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MySql.EntityFrameworkCore" Version="7.0.2" />
+  </ItemGroup>
+
 </Project>
