--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,9 +18,12 @@ jobs:
         dotnet-version: 6.0.x
     - name: Install dependencies
       run: |
-        dotnet add Policlinic\PoliclinicServer package AutoMapper.Extensions.Microsoft.DependencyInjection --version 12.0.0
+        dotnet add Policlinic\PoliclinicServer package AutoMapper --version 12.0.1
+        dotnet add Policlinic\PoliclinicServer package Microsoft.EntityFrameworkCore.Tools --version 6.0.15
+        dotnet add Policlinic\PoliclinicServer package AutoMapper.Extensions.Microsoft.DependencyInjection --version 12.0.1
         dotnet add Policlinic\PoliclinicServer package Swashbuckle.AspNetCore --version 6.2.3
-        dotnet add Policlinic\Policlinic package Microsoft.EntityFrameworkCore --version 6.0.16
+        dotnet add Policlinic\PoliclinicServer package Microsoft.EntityFrameworkCore.SqlServer --version 6.0.15
+        dotnet add Policlinic\PoliclinicServer package Microsoft.VisualStudio.Web.CodeGeneration.Design --version 6.0.13
         dotnet add Policlinic\Policlinic package MySql.EntityFrameworkCore --version 7.0.2
     - name: Build with dotnet
       run: dotnet build Policlinic\PoliclinicServer
