--- a/.github/рабочие процессы/GitActionsForShopApp.yml
+++ b/.github/рабочие процессы/GitActionsForShopApp.yml
@@ -2,11 +2,9 @@ name: GitActionsForShopApp
 on: 
   workflow_dispatch:
   push:
-    branches: 
-      -main
+    branches: ["main"]
   pull_request:
-    branches: 
-      -main
+    branches: ["main"]
 jobs:
   build:
     runs-on: windows-latest
