--- a/.github/workflows/GitActionsForShopApp.yml
+++ b/.github/workflows/GitActionsForShopApp.yml
@@ -20,8 +20,8 @@ jobs:
       run: 
         dotnet add ShopApp\Shop.Server package AutoMapper.Extensions.Microsoft.DependencyInjection --version 12.0.0
         dotnet add ShopApp\Shop.Server package Swashbuckle.AspNetCore --version 6.2.3
-        dotnet add PONRF\PonrfDomain package Microsoft.EntityFrameworkCore --version 6.0.16
-        dotnet add PONRF\PonrfDomain package Npgsql.EntityFrameworkCore.PostgreSQL --version 6.0.8
+        dotnet add ShopApp\Shop.Server package Microsoft.EntityFrameworkCore --version 6.0.16
+        dotnet add ShopApp\Shop.Server package Npgsql.EntityFrameworkCore.PostgreSQL --version 6.0.8
     - name: Build with dotnet
       run: dotnet build ShopApp\Shop.Server
     - name: Test with dotnet
