--- a/.github/workflows/GitActionsForShopApp.yml
+++ b/.github/workflows/GitActionsForShopApp.yml
@@ -18,10 +18,13 @@ jobs:
         dotnet-version: 6.0.x
     - name: Install dependencies
       run: 
+        dotnet add ShopApp\Shop.Server package AutoMapper --version 12.0.1
         dotnet add ShopApp\Shop.Server package AutoMapper.Extensions.Microsoft.DependencyInjection --version 12.0.0
-        dotnet add ShopApp\Shop.Server package Swashbuckle.AspNetCore --version 6.2.3
+        dotnet add ShopApp\Shop.Server package Microsoft.EntityFrameworkCore.SqlServer --version 6.0.15
+        dotnet add ShopApp\Shop.Server package Microsoft.EntityFrameworkCore.Tools --version 6.0.15
+        dotnet add ShopApp\Shop.Server package Microsoft.VisualStudio.Web.CodeGeneration.Design --version 6.0.13        
         dotnet add ShopApp\Shop.Server package Microsoft.EntityFrameworkCore --version 6.0.16
-        dotnet add ShopApp\Shop.Server package Npgsql.EntityFrameworkCore.PostgreSQL --version 6.0.8
+        dotnet add ShopApp\Shop.Server package Swashbuckle.AspNetCore --version 6.2.3
     - name: Build with dotnet
       run: dotnet build ShopApp\Shop.Server
     - name: Test with dotnet
