--- a/.github/workflows/GitActionsForShopApp.yml
+++ b/.github/workflows/GitActionsForShopApp.yml
@@ -17,7 +17,7 @@ jobs:
       with:
         dotnet-version: 6.0.x
     - name: Install dependencies
-      run: 
+      run: |
         dotnet add ShopApp\Shop.Server package AutoMapper --version 12.0.1
         dotnet add ShopApp\Shop.Server package AutoMapper.Extensions.Microsoft.DependencyInjection --version 12.0.0
         dotnet add ShopApp\Shop.Server package Microsoft.EntityFrameworkCore.SqlServer --version 6.0.15
