--- a/SelectionCommittee/SelectionCommittee.Server/SelectionCommittee.Server.csproj
+++ b/SelectionCommittee/SelectionCommittee.Server/SelectionCommittee.Server.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
+    <PackageReference Include="MySql.EntityFrameworkCore" Version="7.0.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
