--- a/.github/workflows/GitActionsForShopApp.yml
+++ b/.github/workflows/GitActionsForShopApp.yml
@@ -19,6 +19,12 @@ jobs:
     - name: Install dependencies
       run: |
         dotnet add ShopApp\ShopServer package AutoMapper --version 12.0.0
+        dotnet add ShopApp\ShopServer package AutoMapper.Extensions.Microsoft.DependencyInjection --version 12.0.0
+        dotnet add ShopApp\ShopServer package Microsoft.EntityFrameworkCore.SqlServer --version 6.0.15
+        dotnet add ShopApp\ShopServer package Microsoft.EntityFrameworkCore.Tools --version 6.0.15
+        dotnet add ShopApp\ShopServer package Microsoft.VisualStudio.Web.CodeGeneration.Design --version 6.0.13        
+        dotnet add ShopApp\ShopServer package Microsoft.EntityFrameworkCore --version 6.0.10
+        dotnet add ShopApp\ShopServer package Swashbuckle.AspNetCore --version 6.2.3
     - name: Build with dotnet
       run: dotnet build ShopApp\ShopServer
     - name: Test with dotnet
