--- a/Recruitment/RecruitmentAgency/RecruitmentAgency.Client/RecruitmentAgency.Client.csproj
+++ b/Recruitment/RecruitmentAgency/RecruitmentAgency.Client/RecruitmentAgency.Client.csproj
@@ -25,6 +25,7 @@
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="0.10.18" />
     <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.18" />
+    <PackageReference Include="MessageBox.Avalonia" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.ApiDescription.Client" Version="7.0.2">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
